// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Button passes the snapshot test for basic setup 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test for different color schemes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Primary button"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Primary button
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Secondary button"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#FF6AC6",
            "borderColor": "#FF6AC6",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF6AC6",
              "borderColor": "#FF6AC6",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF6AC6",
              "borderColor": "#FF6AC6",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FF6AC6",
          "borderColor": "#FF6AC6",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Secondary button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test for different icons 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button with left icon"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <View
        animate={{}}
        animatedStyle={
          {
            "value": {},
          }
        }
        collapsable={false}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text />
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animate={
            {
              "color": "#FFFFFF",
            }
          }
          animatedStyle={
            {
              "value": {
                "color": "#FFFFFF",
              },
            }
          }
          collapsable={false}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
          variant="p3"
        >
          Button with left icon
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Button with right icon"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <View
        animate={{}}
        animatedStyle={
          {
            "value": {},
          }
        }
        collapsable={false}
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animate={
            {
              "color": "#6A7BFF",
            }
          }
          animatedStyle={
            {
              "value": {
                "color": "#6A7BFF",
              },
            }
          }
          collapsable={false}
          style={
            {
              "color": "#6A7BFF",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
          variant="p3"
        >
          Button with right icon
        </Text>
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test for different sizes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 4,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 2,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 2,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 2,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 11.5,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Button press
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 6,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p4"
      >
        Button press
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Button press
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        variant="p2"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test for different variants 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Button press
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#6A7BFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#6A7BFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#6A7BFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Button press
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#F0F2FF00",
            "borderRadius": 8,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#F0F2FF00",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#F0F2FF00",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#F0F2FF00",
          "borderRadius": 8,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#6A7BFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#6A7BFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#6A7BFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test for loading state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 0.5,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 0.5,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "alignSelf": "center",
                "color": "#FFFFFF",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animate={
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            }
          }
          collapsable={false}
          rawSize={15}
          style={
            {
              "height": 15,
              "width": 15,
            }
          }
          variant="spinner"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 15,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 15,
                      "transform": [
                        {
                          "translateY": 0,
                        },
                        {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#FFFFFF",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 15,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 7.5,
                    "overflow": "hidden",
                    "top": 7.5,
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 15,
                      "transform": [
                        {
                          "translateY": -7.5,
                        },
                        {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#FFFFFF",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "transparent",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "transparent",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "transparent",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Basic loading button
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 0.5,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 0.5,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <View
        animate={
          {
            "alignItems": "center",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignItems": "center",
            },
          }
        }
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              [
                {
                  "alignSelf": "flex-start",
                },
                {
                  "alignSelf": "center",
                  "color": "#FFFFFF",
                  "flex": 0,
                },
              ],
            ]
          }
        >
          <View
            accessibilityLabel="Loading indicator"
            accessibilityRole="progressbar"
            accessible={true}
            animate={
              {
                "alignSelf": "center",
                "color": "#FFFFFF",
              }
            }
            collapsable={false}
            rawSize={15}
            style={
              {
                "height": 15,
                "width": 15,
              }
            }
            variant="spinner"
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 15,
                    "transform": [
                      {
                        "rotate": "82.5deg",
                      },
                      {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 15,
                        "transform": [
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "-172.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "#FFFFFF",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 15,
                    "transform": [
                      {
                        "rotate": "82.5deg",
                      },
                      {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 7.5,
                      "overflow": "hidden",
                      "top": 7.5,
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 15,
                        "transform": [
                          {
                            "translateY": -7.5,
                          },
                          {
                            "rotate": "352.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "#FFFFFF",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animate={
            {
              "color": "#FFFFFF",
              "marginLeft": 10,
            }
          }
          animatedStyle={
            {
              "value": {
                "color": "#FFFFFF",
                "marginLeft": 10,
              },
            }
          }
          collapsable={false}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 22,
              "marginLeft": 10,
            }
          }
          variant="p3"
        >
          Loading
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 0.5,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 0.5,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <View
        animate={
          {
            "alignItems": "center",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignItems": "center",
            },
          }
        }
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animate={
            {
              "color": "#FFFFFF",
              "marginRight": 10,
            }
          }
          animatedStyle={
            {
              "value": {
                "color": "#FFFFFF",
                "marginRight": 10,
              },
            }
          }
          collapsable={false}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 22,
              "marginRight": 10,
            }
          }
          variant="p3"
        >
          Loading
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              [
                {
                  "alignSelf": "flex-start",
                },
                {
                  "alignSelf": "center",
                  "color": "#FFFFFF",
                  "flex": 0,
                },
              ],
            ]
          }
        >
          <View
            accessibilityLabel="Loading indicator"
            accessibilityRole="progressbar"
            accessible={true}
            animate={
              {
                "alignSelf": "center",
                "color": "#FFFFFF",
              }
            }
            collapsable={false}
            rawSize={15}
            style={
              {
                "height": 15,
                "width": 15,
              }
            }
            variant="spinner"
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 15,
                    "transform": [
                      {
                        "rotate": "82.5deg",
                      },
                      {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 15,
                        "transform": [
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "-172.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "#FFFFFF",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 15,
                    "transform": [
                      {
                        "rotate": "82.5deg",
                      },
                      {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 7.5,
                      "overflow": "hidden",
                      "top": 7.5,
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 15,
                        "transform": [
                          {
                            "translateY": -7.5,
                          },
                          {
                            "rotate": "352.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "#FFFFFF",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test when using style props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#C5CEE0",
            "borderRadius": 8,
            "borderWidth": 2,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#C5CEE0",
              "borderRadius": 8,
              "borderWidth": 2,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#C5CEE0",
              "borderRadius": 8,
              "borderWidth": 2,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 10,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#C5CEE0",
          "borderRadius": 8,
          "borderWidth": 2,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        variant="p3"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;
